# bluez-dbus-cpp

./: .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt  SerialCharacteristic.h  example.cpp
example-ell-sockets/: CMakeLists.txt
include/bluez-dbus-cpp/: Adapter1.h  Client.h  Device1.h  GattApplication1.h  GattCharacteristic1.h  GattCharacteristicBuilder.h  GattDescriptor1.h  GattManager1.h  GattService1.h  GenericCharacteristic.h  LEAdvertisement1.h  LEAdvertisingManager1.h  ReadOnlyCharacteristic.h  Socket.h  Util.h  bluez-ext.h  bluez.h
include/bluez-dbus-cpp/adaptor/: GattCharacteristic1_adaptor.h  GattDescriptor1_adaptor.h  GattService1_adaptor.h  ObjectManagerExt_adaptor.h  PropertiesExt_adaptor.h
include/bluez-dbus-cpp/proxy/: Adapter1_proxy.h  AgentManager1_proxy.h  Device1_proxy.h  HealthManager1_proxy.h  Media1_proxy.h  NetworkServer1_proxy.h  ProfileManager1_proxy.h  SimAccess1_proxy.h
interface/: LEAdvertisingManager1.xml
src/: GattCharacteristic1.cpp  GattDescriptor1.cpp  GattService1.cpp  Util.cpp
